--- a/MiRadio-Startup/Views/Usuarios/Delete.cshtml
+++ b/MiRadio-Startup/Views/Usuarios/Delete.cshtml
@@ -4,61 +4,70 @@
     ViewData["Title"] = "Eliminar";
 }
 
+<!-- Estilo para la imagen de fondo -->
 <style>
     body {
-        background-image: url('/imagenes/imagen8.jpg'); /* Ruta a tu imagen de fondo */
+        background-image: url('/imagenes/imagen8.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
         height: 100%;
+        margin: 0;
     }
 
     .container {
-        padding: 20px; /* Ajusta el espaciado interior según sea necesario */
+        background-color: rgba(255, 255, 255, 0.9); /* Fondo blanco semitransparente */
+        padding: 20px;
+        border-radius: 10px;
+        margin-top: 50px;
+        max-width: 600px;
+        box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+    }
+
+    h1, h3, h4 {
+        text-align: center;
     }
 </style>
-<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
+<div class="container">
+    <h1>Eliminar Usuario</h1>
+    <h3>¿Estás seguro de que quieres eliminar este usuario?</h3>
+
     <h4>Usuario</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.Nombre)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.Nombre)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.Email)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.Email)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.NombreUsuario)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.NombreUsuario)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Password)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Password)
-        </dd>
-        <dt class = "col-sm-2">
+        <!-- Ocultar el campo de contraseña por seguridad -->
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.Rol)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.Rol)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
-        <a asp-action="Index">Volver Atras</a>
+        <div class="text-center">
+            <input type="submit" value="Eliminar" class="btn btn-danger" />
+            <a class="btn btn-secondary" asp-action="Index">Volver Atrás</a>
+        </div>
     </form>
 </div>
