--- a/MiRadio-Startup/Views/Usuarios/Details.cshtml
+++ b/MiRadio-Startup/Views/Usuarios/Details.cshtml
@@ -7,57 +7,62 @@
 <!-- Estilo para la imagen de fondo -->
 <style>
     body {
-        background-image: url('/imagenes/imagen8.jpg'); /* Ruta a tu imagen de fondo */
+        background-image: url('/imagenes/imagen8.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
         height: 100%;
+        margin: 0; /* Elimina el margen por defecto del body */
     }
 
     .container {
-        padding: 20px; /* Ajusta el espaciado interior según sea necesario */
+        background-color: rgba(255, 255, 255, 0.8); /* Fondo blanco semitransparente */
+        padding: 20px;
+        border-radius: 10px; /* Bordes redondeados */
+        margin-top: 50px; /* Separación desde la parte superior */
+        max-width: 600px; /* Ancho máximo de la tarjeta */
     }
+
+        .container h1, .container h4 {
+            text-align: center; /* Centrar los títulos */
+        }
 </style>
 
-<h1>Detalles</h1>
-
-<div>
-    <h4>Usuario</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NombreUsuario)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NombreUsuario)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Password)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Password)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Rol)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Rol)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> |
-    <a asp-action="Index">Volver Atras</a>
+<div class="container">
+    <h1>Detalles</h1>
+    <div>
+        <h4>Usuario</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.Nombre)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.Nombre)
+            </dd>
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.Email)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.Email)
+            </dd>
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.NombreUsuario)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.NombreUsuario)
+            </dd>
+            <!-- Omite mostrar la contraseña para mejorar la seguridad -->
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.Rol)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.Rol)
+            </dd>
+        </dl>
+    </div>
+    <div class="text-center">
+        <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model?.Id">Editar</a>
+        <a class="btn btn-secondary" asp-action="Index">Volver Atras</a>
+    </div>
 </div>
