--- a/MiRadio-Startup/Views/Usuarios/Edit.cshtml
+++ b/MiRadio-Startup/Views/Usuarios/Edit.cshtml
@@ -3,82 +3,97 @@
 @{
     ViewData["Title"] = "Editar";
 }
+
 <!-- Estilo para la imagen de fondo -->
 <style>
     body {
-        background-image: url('/imagenes/imagen8.jpg'); /* Ruta a tu imagen de fondo */
+        background-image: url('/imagenes/imagen8.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
         height: 100%;
+        margin: 0;
     }
 
     .container {
-        padding: 20px; /* Ajusta el espaciado interior según sea necesario */
+        background-color: rgba(255, 255, 255, 0.9);
+        padding: 20px;
+        border-radius: 10px;
+        margin-top: 50px;
+        max-width: 600px;
+        box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+    }
+
+    h1, h4 {
+        text-align: center;
+    }
+
+    .table-responsive {
+        margin: auto;
+    }
+
+    .form-control-blue-border {
+        border-color: #007bff; /* Cambia esto a tu preferencia */
     }
 </style>
 
-<h1>Editar Usuario</h1>
+<div class="container">
+    <h1>Editar Usuario</h1>
 
-<h4>Usuario</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <div class="table-responsive">
-            <table class="table table-bordered table-blue-border">
-                <tbody>
-                    <tr>
-                        <td>
-                            <form asp-action="Edit">
-                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                <input type="hidden" asp-for="Id" />
-                                <div class="form-group">
-                                    <label asp-for="Nombre" class="control-label"></label>
-                                    <input asp-for="Nombre" class="form-control form-control-blue-border" />
-                                    <span asp-validation-for="Nombre" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <label asp-for="Email" class="control-label"></label>
-                                    <input asp-for="Email" class="form-control form-control-blue-border" />
-                                    <span asp-validation-for="Email" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <label asp-for="NombreUsuario" class="control-label"></label>
-                                    <input asp-for="NombreUsuario" class="form-control form-control-blue-border" />
-                                    <span asp-validation-for="NombreUsuario" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <label asp-for="Password" class="control-label"></label>
-                                    <input asp-for="Password" class="form-control form-control-blue-border" />
-                                    <span asp-validation-for="Password" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <label asp-for="Rol" class="control-label"></label>
-                                    <select asp-for="Rol" class="form-control form-control-blue-border">
-                                        <option value="">Seleccione..</option>
-                                        <option value="1">Administrador</option>
-                                        <option value="2">Moderador</option>
-                                    </select>
-                                    <span asp-validation-for="Rol" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <input type="submit" value="Guardar" class="btn btn-primary" />
-                                </div>
-                            </form>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+    <h4>Usuario</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-12">
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="Id" />
+
+                <div class="form-group">
+                    <label asp-for="Nombre" class="control-label"></label>
+                    <input asp-for="Nombre" class="form-control form-control-blue-border" />
+                    <span asp-validation-for="Nombre" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="Email" class="control-label"></label>
+                    <input asp-for="Email" class="form-control form-control-blue-border" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="NombreUsuario" class="control-label"></label>
+                    <input asp-for="NombreUsuario" class="form-control form-control-blue-border" />
+                    <span asp-validation-for="NombreUsuario" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="Password" class="control-label"></label>
+                    <input asp-for="Password" type="password" class="form-control form-control-blue-border" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="Rol" class="control-label"></label>
+                    <select asp-for="Rol" class="form-control form-control-blue-border">
+                        <option value="">Seleccione...</option>
+                        <option value="1">Administrador</option>
+                        <option value="2">Moderador</option>
+                    </select>
+                    <span asp-validation-for="Rol" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <input type="submit" value="Guardar" class="btn btn-primary" />
+                </div>
+            </form>
         </div>
+    </div>
+
+    <div class="text-center">
+        <a class="btn btn-secondary" asp-action="Index">Volver a la Lista</a>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Volver a la Lista</a>
-</div>
-
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+    <partial name="_ValidationScriptsPartial" />
 }
